--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "react": "^16.10.1",
     "react-dom": "^16.10.1",
     "react-scripts": "3.1.2",
+    "shortid": "^2.2.15",
     "styled-components": "^4.4.0"
   },
   "scripts": {
